--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/Docker-Logo-White.png
+    - assets/docker-50.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
